# spec_extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ollama  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
scripts/: entrypoint.sh  git-setup.sh
src/app/: gradio_app.py  test_extraction.py
src/spec_extractor/: __init__.py  extractor.py  models.py
src/spec_extractor/config/: __init__.py  config.py  model_vairable_mapping.py  model_variable_mapping.py  models.py  ollama_config.py  prompt.py
