[project]
name = "spec-extractor"
version = "0.1.0"
description = "Spec extractor project"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.23.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-ollama>=0.1.0",
    "pydantic>=2.0.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_extractor"]

